--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <title>DELICIOUS FOODS</title>
+  <title>DELICIOUS FOOD</title>
   <link rel="stylesheet" href="style.css">
 
 </head>
